--- a/hack/containerd.toml
+++ b/hack/containerd.toml
@@ -3,6 +3,7 @@ version = 3
 disabled_plugins = [
     "io.containerd.cri.v1.images",
     "io.containerd.cri.v1.runtime",
+    "io.containerd.differ.v1.erofs",
     "io.containerd.grpc.v1.cri",
     "io.containerd.grpc.v1.sandbox-controllers",
     "io.containerd.grpc.v1.sandboxes",
