--- a/hack/cri-containerd.toml
+++ b/hack/cri-containerd.toml
@@ -1,6 +1,7 @@
 version = 3
 
 disabled_plugins = [
+    "io.containerd.differ.v1.erofs",
     "io.containerd.internal.v1.tracing",
     "io.containerd.snapshotter.v1.blockfile",
     "io.containerd.snapshotter.v1.erofs",
