--- a/.github/workflows/slack-notify.yaml
+++ b/.github/workflows/slack-notify.yaml
@@ -1,11 +1,12 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-07-15T17:31:52Z by kres b869533.
+# Generated on 2025-07-21T16:10:17Z by kres b869533.
 
 "on":
   workflow_run:
     workflows:
       - default
+      - grype-scan-cron
       - integration-qemu-cron
       - integration-qemu-enforcing-cron
       - integration-conformance-cron
